--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "axios": "^0.20.0-0",
     "bootstrap": "^5.0.0-beta3",
     "echarts": "^5.1.1",
+    "file-saver": "^2.0.5",
+    "script-loader": "^0.7.2",
     "vue": "^3.0.5",
+    "vue-json-excel": "^0.3.0",
     "vue-router": "4",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.2",
