--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
     "vite": "^2.2.3"
-  }
+  },
+  "license": "Apache-2.0"
 }
